ajout de la vue de l'admin

--- a/babyshop_zeta/src/App.css
+++ b/babyshop_zeta/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+.container{
+  display: flex;
+  margin-top: 10px;
+}
+
+
+.link{
+  text-decoration: none;
+  color: inherit;
+}
